--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 transition: background-color 0.5s ease;
             }
             .liked {
-                background-color: #f8d7da !important; /* Light red background when liked */
+                background-color: #f8d7da !important; 
             }
             .footer {
                 position: fixed;
